# Farmomatica

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Farmomatica.sln  LICENSE  README.md  nuget.config  vcpkg.json
Farmomatica.Android/: Activity1.cs  AndroidManifest.xml  Farmomatica.Android.csproj
Farmomatica.Android/Platform/: SystemInfoProvider.cs
Farmomatica.Android/Resources/Values/: Strings.xml
Farmomatica.Core/: Farmomatica.Core.csproj  Game1.cs
Farmomatica.Core/Common/Logging/: ILogSink.cs  Log.cs  Logger.cs  LoggingTypes.cs
Farmomatica.Core/Common/Platform/: IPlatformRuntime.cs
Farmomatica.Core/Utils/Logger/: Archive.cs
Farmomatica.Core/Utils/Setting/: SystemSettings.cs
Farmomatica.Core/Utils/SystemInfo/: Android.cs  FreeBSD.cs  ISystemInfoCollector.cs  Linux.cs  Mac.cs  SystemInfoCollector.cs  Windows.cs
Farmomatica.DesktopGL/: Farmomatica.DesktopGL.csproj  Game1.cs  Program.cs  app.manifest
Farmomatica.DesktopGL/Infrastructure/Discord/: DiscordManager.cs
Farmomatica.DesktopGL/Infrastructure/Steam/: SteamManager.cs
Farmomatica.DesktopGL/Platform/: PlatformRuntime.cs  SystemInfoProvider.cs
Farmomatica.DesktopGL/Settings/: SystemSettings.cs
Farmomatica.DesktopGL/Sinks/: LogSink.cs
Farmomatica.WindowsDX/: Farmomatica.WindowsDX.csproj  app.manifest
Farmomatica.WindowsDX/Platform/: SystemInfoProvider.cs
Farmomatica.iOS/: Farmomatica.iOS.csproj  Info.plist  Program.cs
assets/shaders/: tile_shader.wgsl
assets/shaders/farmomatica/: tile_shader.fs  tile_shader.vs  tile_shader.wgsl
include/common/data/: game_data.h
include/common/logger/: log.h
include/common/setting/: global_settings.h  global_settings.hpp
include/common/settings/: global_settings.h
include/common/utils/: extension_utils.h
include/game/assets/: shader_loader.h  texture_loader.h
include/game/assets/tile/: tile_loader.h
include/game/render/: tile_renderer.h
include/game/render/tile/: tile_renderer.h
include/game/world/: tile_placer.h
include/game/world/tile_placer/: tile_placer.h
src/: main.cpp
src/common/data/: game_data.cpp
src/common/logger/: log.cpp  log.h
src/common/setting/: global_settings.cpp
src/game/assets/: shader_loader.cpp  texture_loader.cpp
src/game/assets/tile/: tile_loader.cpp
src/game/render/: tile_renderer.cpp
src/game/render/tile/: tile_renderer.cpp
src/game/world/: tile_placer.cpp
src/game/world/tile_placer/: tile_placer.cpp
src/utils/logging/: ILogSinker.h
